[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PauseHUD.gd" type="Script" id=1]

[node name="PauseHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PauseHUD" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="PauseHUD"]
margin_left = 512.0
margin_right = 552.0
margin_bottom = 14.0
rect_scale = Vector2( 3, 3 )
text = "Pause"

[node name="Continue" type="Button" parent="PauseHUD"]
margin_left = 512.0
margin_top = 100.0
margin_right = 581.0
margin_bottom = 120.0
rect_scale = Vector2( 3, 3 )
text = "Continue"

[node name="Restart" type="Button" parent="PauseHUD"]
margin_left = 512.0
margin_top = 200.0
margin_right = 569.0
margin_bottom = 220.0
rect_scale = Vector2( 3, 3 )
text = "Restart"

[node name="ExitFromTitle" type="Button" parent="PauseHUD"]
margin_left = 512.0
margin_top = 300.0
margin_right = 616.0
margin_bottom = 320.0
rect_scale = Vector2( 3, 3 )
text = "Exit From Title"

[node name="ExitFromGame" type="Button" parent="PauseHUD"]
margin_left = 512.0
margin_top = 400.0
margin_right = 623.0
margin_bottom = 420.0
rect_scale = Vector2( 3, 3 )
text = "Exit from Game"
